--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/KUReview66/KUReview-backend#readme",
   "dependencies": {
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mssql": "^11.0.1",
     "mysql": "^2.18.1",
+    "qs": "^6.14.0",
     "request": "^2.88.2"
   }
 }
