--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongodb": "^6.14.2",
     "mssql": "^11.0.1",
     "mysql": "^2.18.1",
     "qs": "^6.14.0",
