--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Backend for KUReview",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "build": "echo 'No build step required for backend'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
