--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "kureview-backend",
   "version": "1.0.0",
   "description": "Backend for KUReview",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "build": "echo 'No build step required for backend'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
